--- a/RegexGenerator/RegexGenerator.csproj
+++ b/RegexGenerator/RegexGenerator.csproj
@@ -46,6 +46,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MenuSettings\Global.cs" />
+    <Compile Include="MenuSettings\OptionsMenu.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MenuSettings\OptionsMenu.Designer.cs">
+      <DependentUpon>OptionsMenu.cs</DependentUpon>
+    </Compile>
     <Compile Include="Quantifier.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -66,6 +73,9 @@
     <Compile Include="TestWindow.Designer.cs">
       <DependentUpon>TestWindow.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="MenuSettings\OptionsMenu.resx">
+      <DependentUpon>OptionsMenu.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Quantifier.resx">
       <DependentUpon>Quantifier.cs</DependentUpon>
     </EmbeddedResource>
